--- a/action.yaml
+++ b/action.yaml
@@ -6,7 +6,7 @@ descr: runs VS Code  and opens it in default web browser
 inputs:
   image:
     descr: image name
-    default: "neuromation/base"
+    default: "ghcr.io/neuro-inc/base:latest"
   job_name:
     descr: Predictable subdomain name, which replaces JobID in the full job URI
     default: ""
@@ -28,20 +28,20 @@ inputs:
     descr: reference to a results volume
 
 job:
-    name: $[[ inputs.job_name ]]
-    image: $[[ inputs.image ]]
-    http_port: $[[ inputs.http_port ]]
-    http_auth: $[[ inputs.http_auth ]]
-    browse: True
-    detach: True
-    pass_config: True
-    volumes:
-      - "$[[ inputs.volumes_data_remote ]]:/project/data:ro"
-      - "$[[ inputs.volumes_code_remote ]]:/project/modules:rw"
-      - "$[[ inputs.volumes_config_remote ]]:/project/config:ro"
-      - "$[[ inputs.volumes_notebooks_remote ]]:/project/notebooks:rw"
-      - "$[[ inputs.volumes_results_remote ]]:/project/results:rw"
-    env:
-      PYTHONPATH: /project/modules
-    bash: |
-      code-server --host 0.0.0.0 --auth none --disable-update-check  /project
+  name: $[[ inputs.job_name ]]
+  image: $[[ inputs.image ]]
+  http_port: $[[ inputs.http_port ]]
+  http_auth: $[[ inputs.http_auth ]]
+  browse: True
+  detach: True
+  pass_config: True
+  volumes:
+    - "$[[ inputs.volumes_data_remote ]]:/project/data:ro"
+    - "$[[ inputs.volumes_code_remote ]]:/project/modules:rw"
+    - "$[[ inputs.volumes_config_remote ]]:/project/config:ro"
+    - "$[[ inputs.volumes_notebooks_remote ]]:/project/notebooks:rw"
+    - "$[[ inputs.volumes_results_remote ]]:/project/results:rw"
+  env:
+    PYTHONPATH: /project/modules
+  bash: |
+    code-server --host 0.0.0.0 --auth none --disable-update-check  /project
